--- a/theme.css
+++ b/theme.css
@@ -1,8 +1,3 @@
-// body > * > * {
-//   border: solid;
-//   border-color: red;
-// }
-
 body {
   font-family: "Trebuchet MS", Helvetica, sans-serif;
   min-width: 200px;
@@ -24,72 +19,68 @@ header {
   font-size: 2.0rem;
   line-height: 0;
   letter-spacing: 2.125px;
-  #ivy {
-    color: #CCEF;
-  }
-  #art {
-    margin-left: -1.9rem;
-    color: #CCE9;
-  }
+}
+header #ivy {
+  color: #CCEF;
+}
+header #art {
+  margin-left: -1.9rem;
+  color: #CCE9;
 }
 
-
-
 nav {
-    border: 1px solid #FFF1;
-    border-width: 0 0 1px 0;
-    text-align: center;
-    ul {
-      margin: 0;
-      padding: 10px 0;
-    }
-    li {
-      list-style: none;
-      display: inline-block;
-      width: 100px;
-    }
-    a {
-    display: inline-block;
-    text-decoration: none;
-    font-variant: small-caps;
-    color: #DDDDC9;
-    line-height: 20px;
-    &::after {
-      content: "";
-      display: block;
-      height: 1px;
-      width: 0%;    
-      background-image: linear-gradient(to right, rgba(100,0,200,10), hotpink);
-      transition: width 0.3s ease-in-out 0s;
-      transition-property: width;
-      transition-duration: 0.3s;
-      transition-timing-function: ease-in-out;
-      transition-delay: 0s;
-    }
-  }
-  a:hover {
-    &::after {
-      width: 101%;
-    }
-  }
+  border: 1px solid #FFF1;
+  border-width: 0 0 1px 0;
+  text-align: center;
+}
+nav ul {
+  margin: 0;
+  padding: 10px 0;
+}
+nav li {
+  list-style: none;
+  display: inline-block;
+  width: 100px;
+}
+nav a {
+  display: inline-block;
+  text-decoration: none;
+  font-variant: small-caps;
+  color: #DDDDC9;
+  line-height: 20px;
+}
+nav a::after {
+  content: "";
+  display: block;
+  height: 1px;
+  width: 0%;
+  background-image: linear-gradient(to right, #6400c8, hotpink);
+  transition: width 0.3s ease-in-out 0s;
+  transition-property: width;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+  transition-delay: 0s;
+}
+nav a:hover::after {
+  width: 101%;
 }
 
 main {
   max-width: 900px;
   margin: 0 auto;
   padding: 20px;
-  article {
-    text-align: left;
-    h2 {
-      display: inline-block;
-      font-size: 2.5rem;
-      line-height: 2rem;
-      margin-bottom: 1.35rem;
-      margin-left: -5.525rem;
-      padding: 0 0 0 100px;
-      background-color: #FBCB;
-    }
-  }
+}
+main article {
+  text-align: left;
+}
+main article h2 {
+  display: inline-block;
+  font-size: 2.5rem;
+  line-height: 2rem;
+  margin-bottom: 1.35rem;
+  margin-left: -5.525rem;
+  padding: 0 0 0 100px;
+  background-color: #FBCB;
 }
 
 footer {
@@ -102,79 +93,59 @@ footer {
   box-shadow: 0 50vh 0 50vh #111029;
 }
 
-@media(min-width: 500px) {
-  nav {
-    
-  }
-  .about-image-container{
+@media (min-width: 500px) {
+  .about-image-container {
     float: left;
     width: 40%;
     padding: 0px 30px 20px 0px;
   }
+
   article {
     padding: 70px 0px 0px 0px;
   }
 }
-
 .about-image-container {
   min-width: 150px;
   max-width: 450px;
   margin: 0 auto;
   shape-outside: circle(50%);
-  
-  .circle-border {
-    position: relative;
-    padding-top: 100%;
-    border-radius: 50%;
-
-    &::before {
-      position: absolute;
-      content: "";
-      width: 102%;
-      height: 102%;
-      top: -1%;
-      left: -1%;
-      border-radius: 50%;
-      background-color: #101533;
-      z-index: 1;
-    }
-    
-    &::after {
-      position: absolute;
-      content: "";
-      width: 104%;
-      height: 104%;
-      top: -2%;
-      left: -2%;
-      border-radius: 50%;
-      background-image: linear-gradient(135deg, teal, hotpink);
-      z-index: 0;
-    //   animation: spin 0.5s linear infinite;
-    //   animation-play-state: paused;
-    // }
-    // &:hover::after {
-    //   animation-play-state: running;
-    }
-
-    .image-wrapper {
-      position: absolute;
-      top: 0px;
-      border-radius: 50%;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
-      z-index: 3;
-    }
-
-    img {
-      width: 100%;
-    }
-  }
-  
-  // @keyframes spin {
-  //   100% {
-  //     transform: rotate(1turn);
-  //   }
-  // }
 }
-
+.about-image-container .circle-border {
+  position: relative;
+  padding-top: 100%;
+  border-radius: 50%;
+}
+.about-image-container .circle-border::before {
+  position: absolute;
+  content: "";
+  width: 102%;
+  height: 102%;
+  top: -1%;
+  left: -1%;
+  border-radius: 50%;
+  background-color: #101533;
+  z-index: 1;
+}
+.about-image-container .circle-border::after {
+  position: absolute;
+  content: "";
+  width: 104%;
+  height: 104%;
+  top: -2%;
+  left: -2%;
+  border-radius: 50%;
+  background-image: linear-gradient(135deg, teal, hotpink);
+  z-index: 0;
+}
+.about-image-container .circle-border .image-wrapper {
+  position: absolute;
+  top: 0px;
+  border-radius: 50%;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  z-index: 3;
+}
+.about-image-container .circle-border img {
+  width: 100%;
+}
